# verimantle

./: .gitignore  ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  Cargo.toml  DEPLOYMENT.md  ENGINEERING_STANDARD.md  GLOBAL_GAPS.md  MANIFESTO.md  README.md  SECURITY.md  STRATEGY.md  docker-compose.yml  package-lock.json  renovate.json
.azure/: README.md  ai-foundry-extension.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-playground.yml  deploy-services.yml  publish-sdk.yml
apps/gateway/: openapi.yaml  package.json  tsconfig.json
apps/gateway/src/: app.module.ts  main.ts
apps/gateway/src/controllers/: arbiter.controller.ts  gate.controller.ts  health.controller.ts  identity.controller.ts  nexus-stream.controller.ts  nexus.controller.ts  synapse.controller.ts
apps/gateway/src/dto/: arbiter.dto.ts  gate.dto.ts  identity.dto.ts  synapse.dto.ts
apps/gateway/src/modules/: arbiter.module.ts  gate.module.ts  identity.module.ts  nexus.module.ts  synapse.module.ts
apps/gateway/src/services/: arbiter.service.ts  gate.service.ts  identity.service.ts  synapse.service.ts
apps/gateway/test/: e2e.spec.ts
apps/identity/src/services/: trust.service.ts
apps/playground/: package.json  vercel.json
docs/: index.html
ee/: LICENSE-ENTERPRISE.md  README.md
ee/audit-export/: Cargo.toml
ee/audit-export/src/: lib.rs
ee/cloud/: Cargo.toml
ee/cloud/src/: lib.rs
ee/cockpit/: README.md
ee/connectors/: license.rs  mod.rs
ee/connectors/mainframe/: cics.rs  ims.rs  mod.rs  mq.rs
ee/connectors/sap/: bapi.rs  event_mesh.rs  mod.rs  odata.rs  rfc.rs
ee/connectors/swift/: gpi.rs  mod.rs  mx_parser.rs  sanctions.rs
ee/energy/: grid.rs  intersect.rs  mod.rs
ee/escalation/: mod.rs  pagerduty.rs  slack.rs  teams.rs
ee/idp/: bridge.rs  demo.rs  mod.rs  trust.rs
ee/microvm/: driver.rs  mod.rs  wasm_executor.rs
ee/models/: adapter.rs  cost_optimizer.rs  mod.rs
ee/retail/: adapter.rs  fulfillment.rs  listings.rs  mod.rs  orders.rs
ee/sovereign-memory/: encryption.rs  migration.rs  mod.rs
ee/sovereign-mesh/: Cargo.toml
ee/sovereign-mesh/src/: lib.rs
ee/sso/: Cargo.toml  README.md
ee/sso/src/: lib.rs
ee/treasury/: Cargo.toml
ee/treasury/src/: lib.rs
ee/trust/: Cargo.toml
ee/trust/src/: lib.rs
examples/cloud/: README.md
examples/cloud/azure/: arm-template.json  marketplace-listing.md
tests/: integration.rs  integration.test.ts
