[workspace]
resolver = "2"

members = [
    # Core Packages (Apache 2.0)
    "packages/gate",
    "packages/synapse",
    "packages/arbiter",
    "packages/nexus",
    "packages/treasury",
    "packages/runtime",
    "packages/edge",
    "packages/native-binding",
    
    # Enterprise Edition (Commercial)
    "ee/audit-export",
    "ee/billing",
    "ee/cloud",
    "ee/cockpit",
    "ee/multitenancy",
    "ee/sovereign-mesh",
    "ee/sso",
    "ee/treasury",
    "ee/trust",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/daretechie/verimantle"
authors = ["VeriMantle Team"]

[workspace.dependencies]
# Async Runtime (Dec 2025 - verified from crates.io)
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.83"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

# Error Handling
thiserror = "2.0"
anyhow = "1.0.95"

# Crypto
sha2 = "0.10.8"
hmac = "0.12.1"
ring = "0.17.8"

# HTTP (Dec 2025 - verified)
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
axum = "0.8.8"

# Database (Dec 2025 - verified)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "sqlite"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

# Time
chrono = { version = "0.4.39", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# WASM (Dec 25, 2025 - wasmtime 40.0.0)
wasmtime = "40.0"

# Neural (ONNX)
ort = "2.0.0-rc.10"
ndarray = "0.16"

# TEE - add when using hardware
# tdx-guest = "0.1"
# sev = "0.1"




[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
