[package]
name = "verimantle-audit-export"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-VeriMantle-Enterprise"
description = "VeriMantle Enterprise: ISO 42001 Compliance Export"
repository = "https://github.com/verimantle/verimantle"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
