[package]
name = "verimantle-cloud"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-VeriMantle-Enterprise"
description = "VeriMantle Enterprise: Multi-Cell Mesh Coordination"
repository = "https://github.com/verimantle/verimantle"
documentation = "https://docs.verimantle.com/enterprise/cloud"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
