[package]
name = "verimantle-sso"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-VeriMantle-Enterprise"
description = "VeriMantle Enterprise: SSO Integration"
repository = "https://github.com/verimantle/verimantle"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
